apps/triageparty-release/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triage-party
  namespace: triageparty-release
  labels:
    app: triageparty-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triageparty-release
  template:
    metadata:
      labels:
        app: triageparty-release
    spec:
      containers:
        - name: triage-party
          image: triageparty/triage-party:1.4.0
          command:
            - "/app/main"
          args:
            - --min-refresh=30s
            - --max-refresh=5m
            - --site=/app/site
            - --3p=/app/third_party
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: pcache
              mountPath: /app/triage-party
      volumes:
        - name: config
          configMap:
            name: triage-party-config-release
        - name: pcache
          persistentVolumeClaim:
            claimName: triage-party-persistence
