apps/triageparty-release/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triage-party-release
  namespace: triageparty-release
  labels:
    app: triage-party
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: triage-party
